istio-teaching/gateway-api/v1alpha2/httproute/gw-bookinfo-http-https.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: bookinfo
spec:
  addresses:
  - value: istio-ingressgateway.istio-system.svc.cluster.local
    type: Hostname
  gatewayClassName: istio
  listeners:  
  - protocol: HTTP
    port: 80
    name: bookinfo-gw
    allowedRoutes:
      namespaces:
        from: All
  - protocol: HTTPS
    port: 443
    name: bookinfo-gw-https
    allowedRoutes:
      namespaces:
        from: All
    tls:
      options: {}
      certificateRefs:
      - name: bookinfo-gateway-secret
        kind: Secret
