istio-teaching/gateway-api/v1alpha2/httproute/bookinfo-httproute-system-rules-backendRefs-filters-requestHeaderModifier-set.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: bookinfo
spec:
  parentRefs:
  - name: bookinfo
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  rules:
  - matches:
    - path: 
        type: PathPrefix
        value: /
    backendRefs:
    - name: productpage
      port: 9080
      filters:
      - requestHeaderModifier:
          set:
          - name: test1
            value: value1
          - name: test2
            value: value2
        type: RequestHeaderModifier
