istio-teaching/gateway-api/v1alpha2/httproute/bookinfo-httproute-system-rules-filters-requestMirror-backendRef.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: bookinfo
spec:
  parentRefs:
  - name: bookinfo
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  rules:
  - matches:
    - path: 
        type: PathPrefix
        value: /
    filters:
    - requestMirror:
        backendRef:
          name: productpage-v2
          port: 9080
      type: RequestMirror
    backendRefs:
    - name: productpage
      port: 9080
