istio-teaching/gateway-api/v1alpha2/httproute/bookinfo-httproute-system-rules-filters-requestRedirect.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: bookinfo
spec:
  parentRefs:
  - name: bookinfo
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
    sectionName: bookinfo-gw
  rules:
  - filters:
    - requestRedirect:
        hostname: bookinfo.com
        port: 32388
        scheme: https
      type: RequestRedirect
    backendRefs:
    - name: productpage
      port: 9080
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: bookinfo-https
spec:
  parentRefs:
  - name: bookinfo
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
    sectionName: bookinfo-gw-https
  rules:
  - matches:
    - path: 
        type: PathPrefix
        value: /
    backendRefs:
    - name: productpage
      port: 9080
