istio-teaching/gateway-api/v1alpha2/httproute/bookinfo-httproute-system-rules-matches-headers.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: bookinfo
spec:
  parentRefs:
  - name: bookinfo
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  rules:
  - matches:
    - headers:
      - type: Exact
        name: test
        value: test
    backendRefs:
    - name: productpage
      port: 9080
