istio-teaching/gateway-api/v1alpha2/httproute/bookinfo-httproute-system-rules-matches-path-Exact.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: bookinfo
spec:
  parentRefs:
  - name: bookinfo
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  rules:
  - matches:
    - path: 
        type: Exact
        value: /productpage
    backendRefs:
    - name: productpage
      port: 9080
