istio-teaching/gateway-api/v1alpha2/httproute/bookinfo-httproute-system-sectionName.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: bookinfo
spec:
  parentRefs:
  - name: bookinfo
    namespace: istio-system
    group: gateway.networking.k8s.io
    sectionName: bookinfo-gw
    kind: Gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: productpage
      port: 9080
