istio-teaching/gateway-api/v1alpha2/httproute/productpage-httproute-system-rules-backendRefs-group-kind.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: productpage
spec:
  rules:
  - matches:
    - path: 
        type: PathPrefix
        value: /
    backendRefs:
    - name: productpage
      port: 9080
      kind: Service
